# HekerBot

./: .env.example  .gitignore  .hekerbot_history  CAPABILITIES.md  Dockerfile  README.md  SECURITY_IMPROVEMENTS.md  context.md  meow.sh  out.txt  pyproject.toml  refactor_status.py  setup.sh  test_ansi.py  test_list.py  test_rich.py  test_textual_screen.py
docs/superpowers/plans/: 2026-07-05-hekerbot-textual-migration.md
docs/superpowers/specs/: 2026-07-05-hekerbot-ui-design.md
sessions/: 0b7268c9.json  206b9146.json  97223613.json  b71ddddc.json  ed096a28.json
src/hekerbot/: main.py  meow.py
src/hekerbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hekerbot/agent/: agent.py  brain.py
src/hekerbot/executor/: docker_executor.py  local_executor.py
src/hekerbot/persistence/: state.py
src/hekerbot/ui/: shell.py  shell.tcss
tests/: screenshot.py  test_basic.py  test_ui.py
